--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-
+----------
+2/1/2018
+*fixed trigger for PbPbFFShape
+*fixed calibration for pp in PbPbFFShape
+*minor changes to offline code
 ----------
 1/31/2018
 *first changelog
