minor changes in offline code, reweighting changes to online code

--- a/Changelog
+++ b/Changelog
@@ -1,14 +1,18 @@
 #TODO
 --------
 2/27/2018
+* updated to latest svn
+* new reweighting scheme
+* new UE maps
+--------
+2/27/2018
 * src/main - cleaned up UE/fake subtraction
 * draw_ChPS - fixed injet histograms
 * comp_ChPS - added injet comparison to FF with fit quality
 * pPbFragmentation package:
-   added Pythia powheg scheme
-   fixed jet corrector, Pythia and pythiapowheg now handled at analysis code level
-   Added fake with and without secondary (truth jet pT) histograms
-   
+*   added Pythia powheg scheme
+*   fixed jet corrector, Pythia and pythiapowheg now handled at analysis code level
+*   Added fake with and without secondary (truth jet pT) histograms
 --------
 2/20/2018
 * Updated UE subtraction (using MB method for < 10 GeV PbPb, TM for > 10 GeV PbPb and all pp) in main and draw_ChPS
