--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 #TODO
+3/6/2018
+*Fixed date for previous commit
+*added UE_check.c
 --------
-2/27/2018
+3/5/2018
 * updated to latest svn
 * new reweighting scheme
 * new UE maps
