new effcor, f_UE

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 #TODO
 --------
+11/7/2018
+*drawing updates across all macros
+*updated to svn version
+--------
 9/7/2018
 *drawing updates across all macros
 *new fcal et binning for finer reweighting factors
