updated names for UE plots, added raw_truthjet plots

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 #TODO
 --------
+13/7/2018
+*updated to svn version
+*new trk eff corr, fcal weights, UEmaps
+--------
 11/7/2018
 *drawing updates across all macros
 *updated to svn version
