--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,10 @@
 #TODO
 --------
-13/7/2018
+20/7/2018
 *updated to svn version
 *new trk eff corr, fcal weights, UEmaps
+*updated names for UE
+*added raw_truthjet plots to offline code
 --------
 11/7/2018
 *drawing updates across all macros
