updated to svn code, bug fixes in unfolding code

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 #TODO
 --------
+9/5/2018
+*updated to svn code
+--------
 6/5/2018
 *added tree handling for updated fcal cent binning
 *restored modified draw_chps code
