--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 #TODO
 --------
+4/13/2018
+*restored to pre-friday (4/6) version, running with forward truth jet veto for
+ALL MC (PbPb and pp) and tree replacing FCal stuff for PbPb MC
+*using MC reweighted eta phi maps (this is incorrect method)
+--------
 4/12/2018
 *fixed dates in changeling
 *cleaned up reco tracks in truthjet plots
