--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 #TODO
 --------
+4/16/2018
+*fixed bug regarding uncertainty for jets
+--------
 4/15/2018
 *put back isolation cuts without running online
 *potential fixes in tracking performance code
