updated to svn version

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 #TODO
 --------
 4/16/2018
+*updated to svn version
+--------
+4/16/2018
 *fixed bug regarding uncertainty for jets
 --------
 4/15/2018
