online code now runs over UE with v3

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 #TODO
 --------
+4/19/2018
+*running over UE with v3
+--------
 4/16/2018
 *offline code can run different versions of systematics
 --------
