stable systematics code, restored UE with only v2 in online code

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 #TODO
 --------
 4/19/2018
+*restored version that runs over UE with only v2
+*stable offline code (including systematics and shit)
+--------
+4/19/2018
 *running over UE with v3
 --------
 4/16/2018
