--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 #TODO
 --------
+5/31/2018
+*updated to svn and updated svn
+--------
 4/20/2018
 *UE_tight used for when running with significance (need both ppTight_tight and uncert_index = 2
 *stylistic updates to plots
